--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="Assets/index.css">
 </head>
 <body>
-  <div class="modal fade" id="modallogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal fade" id="modallogin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <form action="#" method="get">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-        <form action="#" method="get">
+        <div class="modal-body">    
           <div class="mb-3 row">
             <div class="col-md-3 chi"></div>
             <div class="col-md-2">Username</div>
@@ -34,40 +34,18 @@
             </div>
             <div class="col-md-2"></div>
           </div>
-          <div class="mb-3 row">
-            <div class="col-md-3"></div>
-            <div class="col-md-2"></div>
-            <div class="col-md-2 d-grid gap-2 d-md-block" style="margin-left: 10px;">
-              <button class="btn btn-primary" name="btnlogin" id="btnlogin" type="button" onclick="checklogin('Home.html')"><i class="bi bi-save2"></i> Login</button>
-            </div>
-            <div class="col-md-1"></div>
-          </div>
-        </form>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button class="btn btn-primary" name="btnlogin" id="btnlogin" type="button" onclick="checklogin('index.html')"><i class="bi bi-save2"></i> Login</button>
         </div>
       </div>
-    </div>
+    </form>
   </div>
+</div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Profile
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#modallogin">
-                    Login
-                  </a></li>
-                  <li><a class="dropdown-item" href="#">Sign Up</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+        
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
