--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pembayaran Resto</title>
+    <title>SignUp to</title>
     <link rel="icon" href="img/valo.png" type="image/png" sizes="16x16">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -152,6 +152,7 @@
                           <div class="form-floating">
                             <textarea class="form-control" placeholder="Leave a comment here" id="ket" style="height: 100px" minlength="30" required></textarea>
                             <label for="floatingTextarea2">Keterangan</label>
+                            <div id="x5" style="display: non;">Wajib Diisi</div>
                           </div>
                         </div>
                     </div> 
