--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
   </div>
 </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Profile<i class="bi bi-arrow-right"></i>
       </button>  
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#" style="margin-left: 200px;">Navbar</a>
+          <a class="navbar-brand" href="#" style="margin-left: 200px;">KyuukoStasion</a>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="https://www.instagram.com/kyuuko.ch/"><i class="bi bi-instagram"></i> Our Socmed</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -88,34 +88,83 @@
       </nav>
 <section class="container-fluid">
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6"><a href="#"><img src="img/valo.png" class="w-100 p-3 valo"></a></div>
+      <div class="col-md-3"><h1>Hottest Game :</h1></div>
+      <div class="col-md-6">
+        <a href="valo.html"><img src="img/valo.png" class="w-100 p-3 valo"></a>
+        <div class="row">
+          <div class="col-md-1"></div>
+          <div class="col-md"><h3>Valorant</h3> Free to play</div>
+        </div>
+      </div>
       <div class="col-md-3"></div>
     </div>
     <div class="row">
-      <h5>Browse</h5>
-      <div class="row">
-        <div class="konten">
-          <button type="button" class="btnf btn1">Early Acces</button>
-          <button type="button" class="btnf btn1">New game</button>
-          <button type="button" class="btnf btn1">Jus For You</button>
-          <button type="button" class="btnf btn1">Free to play</button>
-      </div>   
-      </div>
+      <div class="content">
+        <h1>BROWSE</h1>
+        <div>
+            <button type="button"><span></span><a href="#" class="n1">Early Access</a></button>
+            <button type="button"><span></span><a href="#" class="n1" target="blank">For You</a></button>
+            <button type="button"><span></span><a href="#" class="n1" target="_blank">New Game</a></button>
+            <button type="button"><span></span><a href="#" class="n1">Free To play</a></button>
+        </div>    
+    </div>
     </div>
     <div class="row">
       <div class="col-md">
         <div class="row">
-          <div class="col-md"><a href="#"><img src="img/cod.jpg" class="h-75 w-50 p-3 valo gg"></a></div>
-          <div class="col-md"><a href="#"><img src="img/fallout 4.jpg" class="h-75 w-50 p-3 valo gg"></a></div>
-          <div class="col-md"><a href="#"><img src="img/genshin.jpg" class="h-75 w-50 p-3 valo gg"></a></div>
+          <div class="col-md"><a href="#">
+            <a href="cod.html"><img src="img/cod.jpg" class="h-75 w-50 p-3 valo gg"></a>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md"><h3>Call of Duty</h3>$32.99</div>
+            </div>
+          </div>
+          <div class="col-md"><a href="#">
+            <a href="fallout4.html"><img src="img/fallout 4.jpg" class="h-75 w-50 p-3 valo gg"></a>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md"><h3>Fallout 4</h3>$19.99</div>
+            </div>
+          </div>
+          <div class="col-md"><a href="#">
+            <a href="genshin.html"><img src="img/genshin.jpg" class="h-75 w-50 p-3 valo gg"></a>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-md"><h3>Genshin impact</h3>Free to play</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-
-
 </section>
+<footer id="kaki" class="container-fluid text-primary">
+  <hr>
+  <div class="mb-3 row">
+    <div class="col-md-2"></div>
+    <div class="col-md-7"><b>Head Office :</b></div>
+    <div class="col-md-2"><b>Social Media</b></div>
+    <div class="col-md-2"></div>
+  </div>
+  <div class="mb-2 row">
+    <div class="col-md-2"></div>
+    <div class="col-md-7">Jalan Raya Sidojangkung, Menganti Satelit indah Blok DN-08</div>
+    <div class="col-md-2"><a href="https://wa.me/082337034392" class="n1 text-primary" target="_blank"><i class="bi bi-whatsapp"></i> Whatsapp</a></div>
+    <div class="col-md-2"></div>
+  </div>
+  <div class="mb-2 row">
+    <div class="col-md-2"></div>
+    <div class="col-md-7">Telepon : 0823-3703-4392</div>
+    <div class="col-md-2"><a href="https://www.instagram.com/kyuuko.ch/" class="n1 text-primary" target="_blank"><i class="bi bi-instagram"></i> Instagram</a></div>
+    <div class="col-md-2"></div>
+  </div>
+  <div class="mb-2 row">
+    <div class="col-md-2"></div>
+    <div class="col-md-7">Email : ferofelix123@gmail.com</div>
+    <div class="col-md-2"><a href="https://www.facebook.com/fero.e.felix.1" class="n1 text-primary" target="_blank"><i class="bi bi-facebook"></i> Facebook</a></div>
+    <div class="col-md-2"></div>
+  </div>
+  
+</footer>
     <script src="Assets/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
