--- a/signup.html
+++ b/signup.html
@@ -193,7 +193,8 @@
                         </div>
                         <div class="col-md-4"></div> 
                       </div>
-                    <table class="table table-borderless w-75 p-3" name="">
+                    <div class="col-md-8">
+                      <table class="table table-borderless w-75 p-3" name="">
                         <thead>
                             <tr>
                                 <th scope="row">Username =</th>
@@ -225,9 +226,9 @@
                         </tbody>
                     </table>
                   </div>
-            </div>
-        </div>
-    <div class=""></div>
+              </div>
+          </div>
+      </div>
 </div>       
 </form>
 </section>
