--- a/signup.html
+++ b/signup.html
@@ -152,7 +152,7 @@
                           <div class="form-floating">
                             <textarea class="form-control" placeholder="Leave a comment here" id="ket" style="height: 100px" minlength="30" required></textarea>
                             <label for="floatingTextarea2">Keterangan</label>
-                            <div id="x5" style="display: none;">Wajib Diisi</div>
+                            <div id="x5" style="display: none;">minimal 30 kata</div>
                           </div>
                         </div>
                     </div> 
