--- a/signup.html
+++ b/signup.html
@@ -165,15 +165,14 @@
                                     Tunai
                                 </label>                
                             </div> -->
-                       
+                        </div>
                         <!-- <div class="col-md">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="ntn" value="Non-Tunai" >
                                 <label class="form-check-label" for="flexRadioDefault2">
                                 Non-Tunai
                                 </label>
-                            </div>--> 
-                        </div>
+                            </div>-->                        
                     </div>
                     <div class="mb-3 row">
                         <div class="col-md-3"></div>
@@ -194,7 +193,7 @@
                         <div class="col-md-4"></div> 
                       </div>
                     <div class="col-md-8">
-                      <table class="table table-borderless w-75 p-3" name="">
+                      <table class="table table-borderless" name="">
                         <thead>
                             <tr>
                                 <th scope="row">Username =</th>
@@ -221,15 +220,12 @@
                                 <td id="data7" class="w-75 p-3"></td>
                             </tr>
                         </thead>
-                        <tbody>
-
-                        </tbody>
                     </table>
                   </div>
               </div>
           </div>
       </div>
-</div>       
+  </div>       
 </form>
 </section>
 <footer id="kaki" class="container-fluid text-primary" style="background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);">
